// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order <AfterContent/> render() should display credit memos with links because there is an admin url suffix 1`] = `
<div>
  <div
    class="mt-3"
  >
    <div
      class="card"
    >
      <div
        class="header clearfix card-body"
      >
        <a
          href="https://magento.gorgi.us/admin_123/sales/creditmemo/view/creditmemo_id/852/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span>
            <i
              class="material-icons"
            >
              redeem
            </i>
             Credit memo: 
             
          </span>
        </a>
      </div>
      <div
        class="content card-body"
      >
        <div
          class="simple-field"
        >
          <span
            class="field-label"
          >
            Last updated:
          </span>
          <span
            class="field-value"
          >
            <time
              datetime="2018-11-07 05:22"
            />
          </span>
        </div>
        <div
          class="list mt-3"
        >
          <div
            class="card"
          >
            <div
              class="header clearfix card-body"
            >
              <span>
                4
                 x
                 
                Sneakers
              </span>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="header clearfix card-body"
            >
              <span>
                1
                 x
                 
                T-shirt
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card"
    >
      <div
        class="header clearfix card-body"
      >
        <a
          href="https://magento.gorgi.us/admin_123/sales/creditmemo/view/creditmemo_id/854/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <span>
            <i
              class="material-icons"
            >
              redeem
            </i>
             Credit memo: 
             
          </span>
        </a>
      </div>
      <div
        class="content card-body"
      >
        <div
          class="simple-field"
        >
          <span
            class="field-label"
          >
            Last updated:
          </span>
          <span
            class="field-value"
          >
            <time
              datetime="2018-11-07 05:22"
            />
          </span>
        </div>
        <div
          class="list mt-3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <AfterContent/> render() should display credit memos without links because there is no admin url suffix 1`] = `
<div>
  <div
    class="mt-3"
  >
    <div
      class="card"
    >
      <div
        class="header clearfix card-body"
      >
        <a
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <span>
            <i
              class="material-icons"
            >
              redeem
            </i>
             Credit memo: 
             
          </span>
        </a>
      </div>
      <div
        class="content card-body"
      >
        <div
          class="simple-field"
        >
          <span
            class="field-label"
          >
            Last updated:
          </span>
          <span
            class="field-value"
          >
            <time
              datetime="2018-11-07 05:22"
            />
          </span>
        </div>
        <div
          class="list mt-3"
        >
          <div
            class="card"
          >
            <div
              class="header clearfix card-body"
            >
              <span>
                4
                 x
                 
                Sneakers
              </span>
            </div>
          </div>
          <div
            class="card"
          >
            <div
              class="header clearfix card-body"
            >
              <span>
                1
                 x
                 
                T-shirt
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card"
    >
      <div
        class="header clearfix card-body"
      >
        <a
          href=""
          rel="noopener noreferrer"
          target="_blank"
        >
          <span>
            <i
              class="material-icons"
            >
              redeem
            </i>
             Credit memo: 
             
          </span>
        </a>
      </div>
      <div
        class="content card-body"
      >
        <div
          class="simple-field"
        >
          <span
            class="field-label"
          >
            Last updated:
          </span>
          <span
            class="field-value"
          >
            <time
              datetime="2018-11-07 05:22"
            />
          </span>
        </div>
        <div
          class="list mt-3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <AfterContent/> render() should return null because the order has no shipments nor credit memos 1`] = `<div />`;

exports[`Order <BeforeContent/> render() should display shipments with links because there is an admin url suffix 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-secondary badge-pill"
        >
          Info
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="card"
      >
        <div
          class="header clearfix card-body"
        >
          <a
            href="https://magento.gorgi.us/admin_123/sales/shipment/view/shipment_id/963/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="material-icons"
            >
              local_shipping
            </i>
             
            <span>
              Shipment
            </span>
          </a>
        </div>
        <div
          class="content card-body"
        >
          <div
            class="simple-field"
          >
            <span
              class="field-label"
            >
              Last updated:
            </span>
            <span
              class="field-value"
            >
              <time
                datetime="2019-03-04 11:12"
              />
            </span>
          </div>
          <div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Carrier code:
              </span>
              <span
                class="field-value"
              >
                UPS
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking number:
              </span>
              <span
                class="field-value"
              >
                123ABC
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking URL:
              </span>
              <span
                class="field-value"
              >
                -
              </span>
            </div>
          </div>
          <div
            class="list mt-3"
          >
            <div
              class="card"
            >
              <div
                class="header clearfix card-body"
              >
                <span>
                  4
                   x
                   
                  Sneakers
                </span>
              </div>
            </div>
            <div
              class="card"
            >
              <div
                class="header clearfix card-body"
              >
                <span>
                  1
                   x
                   
                  Pants
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="header clearfix card-body"
        >
          <a
            href="https://magento.gorgi.us/admin_123/sales/shipment/view/shipment_id/741/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="material-icons"
            >
              local_shipping
            </i>
             
            <span>
              Shipment
            </span>
          </a>
        </div>
        <div
          class="content card-body"
        >
          <div
            class="simple-field"
          >
            <span
              class="field-label"
            >
              Last updated:
            </span>
            <span
              class="field-value"
            >
              <time
                datetime="2019-02-04 11:12"
              />
            </span>
          </div>
          <div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Carrier code:
              </span>
              <span
                class="field-value"
              >
                LaPoste
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking number:
              </span>
              <span
                class="field-value"
              >
                789GHJ
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking URL:
              </span>
              <span
                class="field-value"
              >
                -
              </span>
            </div>
          </div>
          <div
            class="list mt-3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should display shipments without links because there is no admin url suffix 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-secondary badge-pill"
        >
          Info
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    >
      <div
        class="card"
      >
        <div
          class="header clearfix card-body"
        >
          <a
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="material-icons"
            >
              local_shipping
            </i>
             
            <span>
              Shipment
            </span>
          </a>
        </div>
        <div
          class="content card-body"
        >
          <div
            class="simple-field"
          >
            <span
              class="field-label"
            >
              Last updated:
            </span>
            <span
              class="field-value"
            >
              <time
                datetime="2019-03-04 11:12"
              />
            </span>
          </div>
          <div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Carrier code:
              </span>
              <span
                class="field-value"
              >
                UPS
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking number:
              </span>
              <span
                class="field-value"
              >
                123ABC
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking URL:
              </span>
              <span
                class="field-value"
              >
                -
              </span>
            </div>
          </div>
          <div
            class="list mt-3"
          >
            <div
              class="card"
            >
              <div
                class="header clearfix card-body"
              >
                <span>
                  4
                   x
                   
                  Sneakers
                </span>
              </div>
            </div>
            <div
              class="card"
            >
              <div
                class="header clearfix card-body"
              >
                <span>
                  1
                   x
                   
                  Pants
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card"
      >
        <div
          class="header clearfix card-body"
        >
          <a
            href=""
            rel="noopener noreferrer"
            target="_blank"
          >
            <i
              class="material-icons"
            >
              local_shipping
            </i>
             
            <span>
              Shipment
            </span>
          </a>
        </div>
        <div
          class="content card-body"
        >
          <div
            class="simple-field"
          >
            <span
              class="field-label"
            >
              Last updated:
            </span>
            <span
              class="field-value"
            >
              <time
                datetime="2019-02-04 11:12"
              />
            </span>
          </div>
          <div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Carrier code:
              </span>
              <span
                class="field-value"
              >
                LaPoste
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking number:
              </span>
              <span
                class="field-value"
              >
                789GHJ
              </span>
            </div>
            <div
              class="simple-field"
            >
              <span
                class="field-label"
              >
                Tracking URL:
              </span>
              <span
                class="field-value"
              >
                -
              </span>
            </div>
          </div>
          <div
            class="list mt-3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render the state and an empty created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-secondary badge-pill"
        >
          Info
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the canceled state and a created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-danger badge-pill"
        >
          Canceled
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the closed state and a created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-danger badge-pill"
        >
          Closed
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the complete state and a created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-success badge-pill"
        >
          Complete
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the new state and a created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-info badge-pill"
        >
          New
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the on_hold state and a created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-warning badge-pill"
        >
          On hold
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the pending state and a created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-info badge-pill"
        >
          Pending
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <BeforeContent/> render() should render with a label for the processing state and a created at date but no shipments because there are none 1`] = `
<div>
  <div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        State:
      </span>
      <span
        class="field-value"
      >
        <span
          class="badge badge-info badge-pill"
        >
          Processing
        </span>
      </span>
    </div>
    <div
      class="simple-field"
    >
      <span
        class="field-label"
      >
        Created at:
      </span>
      <span
        class="field-value"
      >
        <time
          datetime="\\"2020-10-07 09:30:03\\""
        />
      </span>
    </div>
    <div
      class="mt-3"
    />
  </div>
</div>
`;

exports[`Order <TitleWrapper/> render() should not render link because there is no admin url suffix 1`] = `
<div>
  <div>
    foo bar
  </div>
</div>
`;

exports[`Order <TitleWrapper/> render() should render link 1`] = `
<div>
  <a
    href="https://magento.gorgi.us/admin_12df/sales/order/view/order_id/1/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <div>
      foo bar
    </div>
  </a>
   
</div>
`;
